# I53-TP8

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  add.algo  asa.c  lexer.lex  parser.y  sample.txt
.cargo/: config.toml
compiler/: LISEZMOI.md  Makefile  README.md
compiler/src/: asa.c  asa.h  codegen.c  codegen_ram.c  codegen_ram.h  driver.c  lexer.lex  parser.y  ts.c  ts.h
compiler/src/llvm/: codegen.cxx  codegen.h  driver.c  intrinsics.c  intrinsics.hxx  lowering.cxx  lowering.hxx
compiler/src/ram/: codegen.c  codegen.h
driver/: Cargo.toml  README.md  build.rs
driver/src/: lib.rs  main.rs  stdin.rs  tmp.rs
examples/: bubble_sort.algo  fibo.algo  max.algo  pow.algo  sub.algo  sum.algo
rame/: Cargo.toml  README.md
rame/src/: error.rs  lib.rs  makro.rs
rame/src/model/: error.rs  inst.rs  ir.rs  makro.rs  mod.rs  ro.rs
rame/src/opt/: mod.rs
rame/src/optimizer/: mod.rs  rw.rs
rame/src/optimizer/pass/: dce.rs  fold.rs
rame/src/runner/: error.rs  mem.rs  mod.rs
src/: asa.c  asa.h  codegen.c  codegen.h  error.rs  lexer.lex  lib.rs  main.rs  makro.rs  parser.y  run.rs  ts.c  ts.h
src/opt/: mod.rs
tests/: bubble_sort.algo  fibo.algo  max.algo  pow.algo  sub.algo  sum.algo
tests/codegen/: arith.algo  bool.algo  cmp.algo  copy.algo  read.algo  unary.algo
tests/parser/: tok.algo
