[package]
name = "rame_driver"
version = "0.0.0"
authors = ["Lieselotte"]
repository = "https://github.com/ShE3py/I53-TP8/"
license = "MIT"
categories = []
keywords = []
edition = "2021"
rust-version = "1.81"
publish = false

[features]
default = ["optimizer", "rame/default"]

# feat: allow `JUMP @n`, but we can't optimize such code.
dynamic_jumps = ["rame/dynamic_jumps"]

# feat: enable to optimizer.
optimizer = ["rame/optimizer"]

[dependencies.rame]
path = "../rame"
default-features = false

[dependencies.clap]
version = "4.5.17"
features = ["derive"]
