[package]
name = "rame_driver"
version = "0.0.0"
authors = ["Lieselotte"]
repository = "https://github.com/ShE3py/I53-TP8/"
license = "MIT"
categories = []
keywords = []
edition = "2021"
rust-version = "1.81"
publish = false

[[bin]]
name = "rame-cc"
path = "src/bin/cc.rs"

[[bin]]
name = "rame-run"
path = "src/main.rs"

[[bin]]
name = "rame-opt"
path = "src/bin/opt.rs"

[features]
default = ["optimizer", "rame/default"]

# feat: allow `JUMP @n`, but we can't optimize such code.
dynamic_jumps = ["rame/dynamic_jumps"]

# feat: enable to optimizer.
optimizer = ["rame/optimizer"]

[dependencies.rame]
path = "../rame"
default-features = false

[dependencies.clap]
version = "4.5.17"
features = ["derive"]

[dependencies.libc]
version = "0.2.158"
