[package]
name = "rame_driver"
version = "0.0.0"
authors = ["Lieselotte"]
repository = "https://github.com/ShE3py/I53-TP8/"
license = "MIT"
categories = []
keywords = []
edition = "2021"
rust-version = "1.81"
publish = false

[features]
optimizer = ["rame/optimizer"]
indirect_jumps = ["rame/indirect_jumps"]

[[bin]]
name = "rame-cc"
path = "src/bin/cc.rs"

[[bin]]
name = "rame-opt"
path = "src/bin/opt.rs"
required-features = ["optimizer"]

[[bin]]
name = "rame-run"
path = "src/bin/run.rs"

[[bin]]
name = "rame-test"
path = "src/bin/test.rs"

[dependencies.rame]
path = "../rame"

[dependencies.clap]
version = "4.5.17"
features = ["derive"]

[dependencies.libc]
version = "0.2.158"
