[package]
name = "rame"
version = "0.0.0"
authors = ["Lieselotte"]
repository = "https://github.com/ShE3py/I53-TP8/"
license = "MIT"
categories = []
keywords = []
edition = "2021"
rust-version = "1.80"
publish = false

[features]
default = ["optimizer"]

# feat: allow `JUMP @n`, but we can't optimize such code.
dynamic_jumps = []

# feat: enable to optimizer.
optimizer = []

[dependencies.num-traits]
version = "0.2.19"

[dependencies.clap]
version = "4.5.17"
features = ["derive"]
