[package]
name = "rame"
version = "0.0.0"
authors = ["Lieselotte"]
repository = "https://github.com/ShE3py/I53-TP8/"
license = "MIT"
categories = []
keywords = []
edition = "2021"
rust-version = "1.81"
publish = false

[features]
# feat: allow `JUMP @n`, but we can't yet optimize such code.
indirect_jumps = []

# feat: enable the optimizer.
optimizer = []

[dependencies.num-traits]
version = "0.2.19"

[dependencies.sealed]
version = "0.6.0-rc3"
